added more routes, fixed up authentication mw
